--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@ body {
 }
 
 .btn--big::after{
+    /*reads the content to change*/
     content: attr(data-type);
     font-size: 1rem;
     color: #445361;
